NetBSD Problem Report #44935
From plunky@rya-online.net Thu May 5 10:41:26 2011
Return-Path: <plunky@rya-online.net>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
by www.NetBSD.org (Postfix) with ESMTP id 734B163BBEC
for <gnats-bugs@gnats.NetBSD.org>; Thu, 5 May 2011 10:41:26 +0000 (UTC)
Message-Id: <20110505104032.5A5702600A4@galant.ukfsn.org>
Date: Thu, 5 May 2011 11:40:32 +0100 (BST)
From: plunky@rya-online.net
Reply-To: plunky@rya-online.net
To: gnats-bugs@gnats.NetBSD.org
Subject: diagnostic assertion triggered, killing a process
X-Send-Pr-Version: 3.95
>Number: 44935
>Category: kern
>Synopsis: diagnostic assertion triggered, when killing a process
>Confidential: no
>Severity: serious
>Priority: medium
>Responsible: rmind
>State: closed
>Class: sw-bug
>Submitter-Id: net
>Arrival-Date: Thu May 05 10:45:00 +0000 2011
>Closed-Date: Sat May 14 19:09:47 +0000 2011
>Last-Modified: Sun Feb 05 12:30:08 +0000 2012
>Originator: Iain Hibbert
>Release: NetBSD 5.99.48 as per April 7 sources
>Organization:
none
>Environment:
System: NetBSD galant.ukfsn.org 5.99.48 NetBSD 5.99.48 (GALANT) #0: Wed Apr 20 20:43:19 BST 2011 plunky@galant.ukfsn.org:/var/work/NetBSD-current/obj/sys/arch/i386/compile/GALANT i386
Architecture: i386
Machine: i386
>Description:
panic: kernel diagnostic assertion "l->l_mutex != l->l_cpu->ci_schedstate.spc_mutex" failed: file "/var/cvs/NetBSD-current/src/sys/kern/kern_synch.c", line 951
is triggered, when killing a process that is waiting to start
>How-To-Repeat:
1. start a /bin/csh instance
2. note the PID
3. sysctl -w proc.PID.stopfork=1
4. in the csh, start a command (eg "ls")
5. in another shell, kill -9 PID
panic: kernel diagnostic assertion "l->l_mutex != l->l_cpu->ci_schedstate.spc_mutex" failed: file "/var/cvs/NetBSD-current/src/sys/kern/kern_synch.c", line 951
cpu0: Begin traceback...
?(0,ca40d7c0,801,0,0,ca41c1c8,c0b2c1af,0,ca41c1d4,c0b44d31) at 0xcb24f800
?(0,ca40d880,801,0,0,ca41c378,c0b2c1af,0,ca41c384,c0b44d31) at 0xca41c000
?(0,ca40d840,801,0,cb24fd40,cb24fe08,c0b2c1af,0,ca41c534,c0b44d31) at 0xca41c1b0
?(0,ca40d8c0,801,0,ca41b2a0,ca41b368,c0b2c1af,0,ca41c894,c0b44d31) at 0xca41c360
Bad frame pointer: 0xca41c6c0
cpu0: End traceback...
fatal breakpoint trap in supervisor mode
trap type 1 code 0 eip c0259364 cs 8 eflags 246 cr2 bbb3f7d0 ilevel 8
Stopped in pid 43.1 (pkill) at netbsd:breakpoint+0x4: popl %ebp
db{0}> bt
breakpoint(7,0,c051595c,cb2d4b88,ca41c1b0,cb24f800,cb2d4bac,c08d8aae,c0ba7c44,c0aef548) at netbsd:breakpoint+0x4
panic(c0ba7c44,c0aef548,c0b48538,c0b48504,3b7,0,cb2d4bdc,cb24f800,ca41c1b0,cb24f800) at netbsd:panic+0x1fa
kern_assert(c0aef548,c0b48504,3b7,c0b48538,0,cb24f800,cb2d4bfc,c0515a5b,cb24f800,3f) at netbsd:kern_assert+0x2e
setrunnable(cb24f800,3f,cb2d4c0c,c05157e6,ca40d7c0,241,0,100,cb24f800,c1303f60) at netbsd:setrunnable+0x23d
sigpost(9,0,0,c0516551,ca3ec764,241,9,0,0,1000000) at netbsd:sigpost+0x15b
kpsignal2(ca41c1b0,cb2d4ca0,cb2d4c7c,c051e360,c0c7a240,bfbfe27c,cb24f020,cb24f020,cb2d4d00,cb2d4cd0) at netbsd:kpsignal2+0x516
kill1(cb2d4d28,0,0,c0751151,0,cb161774,cb2d4ca0,0,0,0) at netbsd:kill1+0x15f
sys_kill(cb24f020,cb2d4d00,cb2d4d28,bbb3f7da,bbb3f000,cb25cbd4,25,1d,9,bfbfedb4) at netbsd:sys_kill+0x5b
syscall(cb2d4d48,b3,ab,1f,1f,0,3,bfbfe548,bb9027f8,bb906040) at netbsd:syscall+0xb9
>Fix:
I do not know
>Release-Note:
>Audit-Trail:
Responsible-Changed-From-To: kern-bug-people->rmind
Responsible-Changed-By: rmind@NetBSD.org
Responsible-Changed-When: Fri, 06 May 2011 13:38:32 +0000
Responsible-Changed-Why:
Take.
From: "Mindaugas Rasiukevicius" <rmind@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/44935 CVS commit: src/sys/kern
Date: Sat, 14 May 2011 18:50:08 +0000
Module Name: src
Committed By: rmind
Date: Sat May 14 18:50:08 UTC 2011
Modified Files:
src/sys/kern: kern_fork.c
Log Message:
fork1: fix stop-on-fork case, lend a correct lock to LWP for LSSTOP state.
Fixes PR/44935.
To generate a diff of this commit:
cvs rdiff -u -r1.183 -r1.184 src/sys/kern/kern_fork.c
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
State-Changed-From-To: open->closed
State-Changed-By: rmind@NetBSD.org
State-Changed-When: Sat, 14 May 2011 19:09:47 +0000
State-Changed-Why:
Fixed.
From: "Manuel Bouyer" <bouyer@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/44935 CVS commit: [netbsd-5] src/sys/kern
Date: Sun, 5 Feb 2012 12:28:09 +0000
Module Name: src
Committed By: bouyer
Date: Sun Feb 5 12:28:08 UTC 2012
Modified Files:
src/sys/kern [netbsd-5]: kern_fork.c
Log Message:
Pull up following revision(s) (requested by rmind in ticket #1628):
sys/kern/kern_fork.c: revision 1.184 via patch
fork1: fix stop-on-fork case, lend a correct lock to LWP for LSSTOP state.
Fixes PR/44935.
To generate a diff of this commit:
cvs rdiff -u -r1.171.4.1 -r1.171.4.2 src/sys/kern/kern_fork.c
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
From: "Manuel Bouyer" <bouyer@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/44935 CVS commit: [netbsd-5-0] src/sys/kern
Date: Sun, 5 Feb 2012 12:28:15 +0000
Module Name: src
Committed By: bouyer
Date: Sun Feb 5 12:28:15 UTC 2012
Modified Files:
src/sys/kern [netbsd-5-0]: kern_fork.c
Log Message:
Pull up following revision(s) (requested by rmind in ticket #1628):
sys/kern/kern_fork.c: revision 1.184 via patch
fork1: fix stop-on-fork case, lend a correct lock to LWP for LSSTOP state.
Fixes PR/44935.
To generate a diff of this commit:
cvs rdiff -u -r1.171.8.1 -r1.171.8.2 src/sys/kern/kern_fork.c
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
From: "Manuel Bouyer" <bouyer@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/44935 CVS commit: [netbsd-5-1] src/sys/kern
Date: Sun, 5 Feb 2012 12:28:21 +0000
Module Name: src
Committed By: bouyer
Date: Sun Feb 5 12:28:20 UTC 2012
Modified Files:
src/sys/kern [netbsd-5-1]: kern_fork.c
Log Message:
Pull up following revision(s) (requested by rmind in ticket #1628):
sys/kern/kern_fork.c: revision 1.184 via patch
fork1: fix stop-on-fork case, lend a correct lock to LWP for LSSTOP state.
Fixes PR/44935.
To generate a diff of this commit:
cvs rdiff -u -r1.171.12.1 -r1.171.12.2 src/sys/kern/kern_fork.c
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
>Unformatted:
(Contact us)
$NetBSD: query-full-pr,v 1.51 2026/08/10 02:28:17 riastradh Exp $
$NetBSD: gnats_config.sh,v 1.10 2026/05/13 22:00:09 riastradh Exp $
Copyright © 1994-2026
The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.